Add sensor data integration with WebClient and configuration
Introduced `SensorsService` and its WebClient-based implementation to fetch sensor data. Added new REST endpoint in `SensorsController` to expose sensor information. Updated Docker setup, Spring configuration, and DTO packages to support this functionality.